[package]
name = "euclid"
version = "0.1.0"
authors = ["Ray Jaffer <ray@thelondonvandal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
"piston" = "*"
piston_window = "0.98.0"
"ansi_term" = "0.12.1"
"clap" = "*"
"glutin" = "*"
"piston2d-graphics" = "*"
"piston2d-opengl_graphics" = "*"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"